--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@loadable/component": "^5.13.1",
     "@testing-library/jest-dom": "^5.11.2",
     "@testing-library/react": "^10.4.8",
     "@types/jest": "^26.0.9",
+    "@types/loadable__component": "^5.13.0",
     "@types/mocha": "^8.0.1",
     "@types/react": "^16.9.44",
     "@types/react-dom": "^16.9.8",
