--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-musicapp",
-  "version": "0.1.0",
-  "private": true,
+  "name": "react-app-boilerplate",
+  "version": "1.0.0",
+  "private": false,
   "dependencies": {
     "@loadable/component": "^5.13.1",
     "@testing-library/jest-dom": "^5.11.2",
